added modal for products

--- a/brands.html
+++ b/brands.html
@@ -55,7 +55,7 @@ title:  'Our Products'
 			<h2>{{ product.name }}</h2>
 		    <p>{{ product.subtitle }} </p>
 		    
-		        <p style="font-size: 14px; color: #8a8a8a;margin-bottom: 20px; letter-spacing: 0.05em;">Luxury day wear, a fragrance that is both vibrant and sophisticated. A perfect complement to Amouage Gold.</p>">{{ product.content }}</p>
+		        <p style="font-size: 14px; color: #8a8a8a;margin-bottom: 20px; letter-spacing: 0.05em;">{{ product.content }}</p>
 		      
 		     <strong> <p>NOTES: <br>
 				{{product.notes}}
