--- a/about.html
+++ b/about.html
@@ -16,25 +16,23 @@ title:  'About Us'
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-6 about-block">
-				<p>A fragrance is a powerful medium to evoke myriad emotions and capture one&#700;s<br>
-				imagination. A realm that can transcend the ordinary experiences of life. Artistic<br>
+				<p>A fragrance is a powerful medium to evoke myriad emotions and capture one&#700;s imagination. A realm that can transcend the ordinary experiences of life. Artistic
 				perfumery is a vision to give expression to such encounters.<br>
-				Artistic perfumes are created using the rarest raw materials sourced from across the<br>
-				world and the focus is on the creation of a distinctive perfume. It is an ode to the art<br>
-				of perfumery by those who are at the crest of artistic creations and create<br>
-				fragrances that reflect true innovation, luxury and exclusivity in every element of<br>
+				Artistic perfumes are created using the rarest raw materials sourced from across the
+				world and the focus is on the creation of a distinctive perfume. It is an ode to the art
+				of perfumery by those who are at the crest of artistic creations and create
+				fragrances that reflect true innovation, luxury and exclusivity in every element of
 				their artistic pursuit.<br>
-				Scent Sutra is a pioneer in introducing artistic perfumes to the Indian elite. Our<br>
-				objective is to become a destination for exclusive perfumes and build a<br>
-				contemporary olfactory culture in India by creating finest avant-garde products and<br>
+				Scent Sutra is a pioneer in introducing artistic perfumes to the Indian elite. Our
+				objective is to become a destination for exclusive perfumes and build a
+				contemporary olfactory culture in India by creating finest avant-garde products and
 				experiences for fragrance connoisseurs.<br>
-				Our products reflect exquisite craftsmanship, refined quality and creative excellence<br>
-				conjuring timeless memories. We are here to take you on a magical journey to<br>
-				discover rare and sophisticated fragrance brands curated from across the world<br>
-				and demystify the world of perfumery.<br>
-				SCENT SUTRA IS FOUNDED BY TWO PASSIONATE ENTREPRENEURS,<br>
-				MS. NEHA KEDIA AND MR. VIVEK CHIDAMBARAM AND SUPPORTED BY<br>
-				MIDAS &ndash; AN INSTITUTION FOUNDED BY MR. PARAG SHAH THAT FOSTERS ENTREPRENEURSHIP IN INDIA.</p>
+				Our products reflect exquisite craftsmanship, refined quality and creative excellence
+				conjuring timeless memories. We are here to take you on a magical journey to
+				discover rare and sophisticated fragrance brands curated from across the world
+				and demystify the world of perfumery.<br> <br>
+				SCENT SUTRA IS FOUNDED BY TWO PASSIONATE ENTREPRENEURS, <strong>MS. NEHA KEDIA</strong> AND <strong>MR. VIVEK CHIDAMBARAM</strong> AND SUPPORTED BY
+				<strong>MIDAS &ndash;</strong> AN INSTITUTION FOUNDED BY MR. PARAG SHAH THAT FOSTERS ENTREPRENEURSHIP IN INDIA.</p>
 			</div>
 			<div class="col-xs-3">
 				<div class="member-block">
