--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@ title:  'Contact Us'
 					<p>Scent Sutra, Ground floor, Nitesh Hub, Koregaon Park,
 					Next to Citibank, Pune 411001, India</p>
 					<br>
+					<h3>STORE TIMING</h3>
+					<p>Monday to Sunday, 11:00 AM - 9:00 PM</p>
+					<br>
 					<br>
 					<p><strong>Contact: </strong>+91 88303 16486</p>
 					<p>For any queries, write to us on cc@scentsutra.com</p>
@@ -30,7 +33,7 @@ title:  'Contact Us'
 		<div id="equalheight">
 			<div class="col-xs-12 col-md-6 contact-form eqcol">
 				<h3>CONTACT US</h3>
-				<form action="https://formspree.io/arnav@teachcoder.in"
+				<form action="https://formspree.io/cc@scentsutra.com"
 				      method="POST" style="margin: 40px">
 				      <div class="form-group">
 				    <input type="text" class="form-control" id="name" placeholder="Name">
@@ -51,7 +54,7 @@ title:  'Contact Us'
 				</form>
 			</div>
 			<div class="col-xs-12 col-md-6 eqcol" style="background: black; color: white; padding-top: 75px; padding-left: 50px;padding-right: 75px;">
-				<h3>HEAD OFFICE</h3>
+				<h3><strong>HEAD OFFICE: </strong></h3>
 				<h4>MIDAS, Florida estate, Keshav Nagar,
 					Mundhwa, Pune - 411036, India</h4>
 			</div>
