--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  'Premium Perfumes'
+title:  'Luxury Niche Perfumes'
 ---
 {% include carousel.html %}
 <section class="home-blocks">
@@ -9,7 +9,7 @@ title:  'Premium Perfumes'
 			<div class="col-lg-4">
 				<div class="row" style="margin: 0">
 					<div class="home-brand-block text-center">
-						<button class="btn btn-default btn-lg primary-btn brands-btn">BRANDS</button>
+						<a href="brands.html"><button class="btn btn-default btn-lg primary-btn brands-btn">BRANDS</button></a>
 					</div>
 					<div class="home-quote-block">
 						<p><strong>“among the five senses, smell is unquestionably the one that best gives the idea of immortality”</strong> <br>
@@ -20,7 +20,7 @@ title:  'Premium Perfumes'
 			<div class="col-lg-8 about-block-wrapper text-center">
 				<div class="home-about-block">
 					<div class="overlay">
-						<button class="btn btn-default btn-lg primary-btn about-home-btn">ABOUT US</button>
+						<a href="about.html"><button class="btn btn-default btn-lg primary-btn about-home-btn">ABOUT US</button></a>
 					</div>
 				</div>
 			</div>
@@ -70,7 +70,7 @@ title:  'Premium Perfumes'
 				</div>
 			</div>
 			<div class="btn-wrapper">
-			<button class="btn btn-default primary-btn view-brands-home text-center">VIEW ALL PRODUCTS</button>
+			<a href="brands.html"><button class="btn btn-default primary-btn view-brands-home text-center">VIEW ALL PRODUCTS</button></a>
 		</div>
 		</div>
 		
