--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@ title:  'Contact Us'
 					<p>Scent Sutra, Ground floor, Nitesh Hub, Koregaon Park,
 					Next to Citibank, Pune 411001, India</p>
 					<br>
-					<h3>STORE TIMING</h3>
+					<h3>STORE HOURS</h3>
 					<p>Monday to Sunday, 11:00 AM - 9:00 PM</p>
 					<br>
 					<br>
-					<p><strong>Contact: </strong>+91 88303 16486</p>
+					<p><strong>Contact: </strong>+91  99303 53131/ +91 +91 88303 16486</p>
 					<p>For any queries, write to us on cc@scentsutra.com</p>
 				</div>
 				<div class="col-xs-6 eqcol" style="    padding-right: 0; padding-left: 0;">
