added legals modal, modified images

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ title:  'About Us'
 			<div class="col-xs-3">
 				<div class="member-block">
 					<div class="member-image">
-						<img src="images/neha.jpg" class="img-responsive">
+						<img src="images/nes.jpg" class="img-responsive">
 					</div>
 					<div class="member-info">
 						<p class="name">
@@ -39,7 +39,7 @@ title:  'About Us'
 			<div class="col-xs-3">
 				<div class="member-block">
 					<div class="member-image">
-						<img src="images/vivek.jpg" class="img-responsive">
+						<img src="images/vivs.jpg" class="img-responsive">
 					</div>
 					<div class="member-info">
 						<p class="name">
