Mobile responsiveness added

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ title:  'About Us'
 <section class="team-info">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-6 about-block">
+			<div class="col-xs-12 col-md-6 about-block">
 				<p>A fragrance is a powerful medium to evoke myriad emotions and capture one&#700;s imagination. A realm that can transcend the ordinary experiences of life. Artistic perfumery is a vision to give expression to such encounters.<br><br>
 				Artistic perfumes are created using the rarest raw materials sourced from across the world and the focus is on the creation of a distinctive perfume. It is an ode to the art of perfumery by those who are at the crest of artistic creations and create fragrances that reflect true innovation, luxury and exclusivity in every element of their artistic pursuit.<br><br>
 				Scent Sutra is a pioneer in introducing artistic perfumes to the Indian elite. Our objective is to become a destination for exclusive perfumes and build a
@@ -24,7 +24,7 @@ title:  'About Us'
 				SCENT SUTRA IS FOUNDED BY TWO PASSIONATE ENTREPRENEURS, <strong>MS. NEHA KEDIA</strong> AND <strong>MR. VIVEK CHIDAMBARAM</strong> AND SUPPORTED BY
 				<strong>MIDAS &ndash;</strong> AN INSTITUTION FOUNDED BY MR. PARAG SHAH THAT FOSTERS ENTREPRENEURSHIP IN INDIA.</p>
 			</div>
-			<div class="col-xs-3">
+			<div class="col-xs-6 col-md-3">
 				<div class="member-block">
 					<div class="member-image">
 						<img src="images/nes.jpg" class="img-responsive">
@@ -36,7 +36,7 @@ title:  'About Us'
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-3">
+			<div class="col-xs-6 col-md-3">
 				<div class="member-block">
 					<div class="member-image">
 						<img src="images/vivs.jpg" class="img-responsive">
