--- a/brands.html
+++ b/brands.html
@@ -47,10 +47,10 @@ title:  'Our Products'
     <!-- Modal content-->
     <div class="modal-content">
     <div class="row" >
-		<div class="col-lg-4 " >
+		<div class=" col-xs-4 col-lg-4 " >
 			<img class="img-responsive" src="{{ product.image_path }} " style="margin: 46px 8px;padding: 18px;"></img>
 		</div>
-		<div class="col-lg-8 " style="border-left: 2px solid black; padding: 35px;">
+		<div class="col-xs-8 col-lg-8 " style="border-left: 2px solid black; padding: 35px;">
 			<img src="{{ product.category-logo }}" class="img-responsive" width="40%">
 			<h2>{{ product.name }}</h2>
 		    <p>{{ product.subtitle }} </p>
