--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ title:  'Contact Us'
 	<div class="container">
 		<div class="row" style="margin-left: 0; margin-right: 0">
 			<div id="equalheight">
-				<div class="col-xs-6 eqcol" style="background: black; color: white">
+				<div class="col-xs-12 col-md-6 eqcol" style="background: black; color: white">
 					<h3>STORE ADDRESS</h3>
 					<p>Scent Sutra, Ground floor, Nitesh Hub, Koregaon Park,
 					Next to Citibank, Pune 411001, India</p>
@@ -18,7 +18,7 @@ title:  'Contact Us'
 					<p><strong>Contact: </strong>+91  99303 53131/ +91 +91 88303 16486</p>
 					<p>For any queries, write to us on cc@scentsutra.com</p>
 				</div>
-				<div class="col-xs-6 eqcol" style="    padding-right: 0; padding-left: 0;">
+				<div class="col-xs-12 col-md-6 eqcol" style="    padding-right: 0; padding-left: 0;">
 					<img class="img-responsive" src="images/map.jpg">
 						
 					</img>
