added more products

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title:  'Luxury Niche Perfumes'
 				</div>
 				<div class="col-lg-3 product-wrapper">
 					<div class="product-block">
-						<img src="images/baronda.jpg" class="product-image">
+						<img src="images/baraonda.jpg" class="product-image">
 						<div class="product-info">
 							<p class="name">BARAONDA</p> 
 							<p class="info">Extrait De Parfum, 30 ml</p>
